Fix vertical align of right quotation mark

--- a/less/app.less
+++ b/less/app.less
@@ -278,9 +278,10 @@ body {
             margin-top: -0.05em;
         }
         p:last-child:after {
-            top: 0.2em;
+            top: 0.1em;
             position: relative;
             margin-left: 0.05em;
+            vertical-align: bottom;
         }
 
         .logo-wrapper {
@@ -326,9 +327,10 @@ body {
 
         }
         p:last-child:after {
-            top: 0.2em;
+            top: 0.1em;
             position: relative;
             margin-left: 0.05em;
+            vertical-align: bottom;
         }
 
         .logo-wrapper {
